Initial work defining simple classes