@@ -98,6 +98,7 @@
                         <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED</arg>
                         <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.dsl=ALL-UNNAMED</arg>
                         <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.utilities=ALL-UNNAMED</arg>
+                        <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api.staticobject=ALL-UNNAMED</arg>
                         <arg>--add-exports=org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
